# signature-delegation

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: app.py  db_connector.py  delegations.py  documents.py  logger.py  minio_client.py  models.py  organizations.py  users.py  utils.py
src/project/: app.py  delegations.py  documents.py  logger.py  main.py  organizations.py  users.py  utils.py
src/project/clients/: db_connector.py
src/project/cron_jobs/: expired_delegations.py
tests/: test_delegations.py  test_documents.py  test_organizations.py  test_users.py
