[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.1.0"
description = "Test project to simulate a service application to handle document signature"
authors = [
    { name = "Cyril Lesueur"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "aioboto3==15.4.0",
    "asyncmy==0.2.10",
    "fastapi==0.120.0",
    "mariadb==1.1.14",
    "SQLAlchemy==2.0.44",
    "python-multipart==0.0.20",
    "uvicorn==0.38.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]